added google auth

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
 MONGO_URL = mongodb+srv://Chaarvi:ztTiJe7uUjZNSPpY@zomato-master.qevg9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID = 1090071399989-gjnnffapan03b7u72rj7uj8d188buc4f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 3SUVNI5b7UhR2B4yekGhEO4w
