--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,6 @@ MONGO_URL = mongodb+srv://Chaarvi:ztTiJe7uUjZNSPpY@zomato-master.qevg9.mongodb.n
 
 GOOGLE_CLIENT_ID = 1090071399989-gjnnffapan03b7u72rj7uj8d188buc4f.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 3SUVNI5b7UhR2B4yekGhEO4w
+
+AWS_S3_ACCESS_KEY = AKIA3QSXAGDI2U34475Z
+AWS_S3_SECRET_KEY = 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
