--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,21 @@
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.4.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.6",
+    "gravatar": "^1.8.2",
     "leaflet": "^1.7.1",
+    "razorpay": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-image-viewer": "^1.0.0",
@@ -24,7 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
@@ -42,11 +46,6 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ],
-  "development": [
-    "last 1 chrome version",
-    "last 1 firefox version",
-    "last 1 safari version"
   ],
   "devDependencies": {
     "autoprefixer": "^9.8.6",
