--- a/server/.env
+++ b/server/.env
@@ -9,4 +9,5 @@ AWS_S3_SECRET_KEY = xDebIU1+FKcE/tjAZUN+yQXpv39AetFn55A7B+x7
 MAILGUN_DOMAIN = sandbox5e63908437ee4a1699b77d8da618b018.mailgun.org
 MAILGUN_API_KEY = 0c682f14c36befd06d6baef01960053c-156db0f1-957d7d4c
 
-rzp_test_BPn4ZemS9ovknG
+RZP_TEST_ID = rzp_test_hCm4UxNQ8PAfkA
+RZP_PAY_SECRET = DCSY3qgASQxNO4sS07ZSqwU3
